force-app/main/default/objects/PRISM_Structure__c/PRISM_Structure__c.object-meta.xml
<CustomObject>
    <description>Physical utility structure such as a pole, transformer, or switch.</description>
    <label>Structure</label>
    <nameField>
        <label>Structure ID</label>
        <type>AutoNumber</type>
        <displayFormat>STR-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>