force-app/main/default/objects/PRISM_Structure__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Good</fullName><default>true</default><label>Good</label></value>
            <value><fullName>Fair</fullName><default>false</default><label>Fair</label></value>
            <value><fullName>Poor</fullName><default>false</default><label>Poor</label></value>
            <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>