force-app/main/default/objects/PRISM_Structure__c/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <label>Service Territory</label>
    <type>Lookup</type>
    <referenceTo>PRISM_ServiceTerritory__c</referenceTo>
    <relationshipLabel>Structures</relationshipLabel>
    <relationshipName>Structures</relationshipName>
    
</CustomField>