force-app/main/default/objects/PRISM_Structure__c/fields/StructureType__c.field-meta.xml
<CustomField>
    <fullName>StructureType__c</fullName>
    <label>Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pole</fullName><default>true</default><label>Pole</label></value>
            <value><fullName>Transformer</fullName><default>false</default><label>Transformer</label></value>
            <value><fullName>Switch</fullName><default>false</default><label>Switch</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
    
</CustomField>